Connected Pocketbase backend, feature and ad tables now save in the server, any updates to the webpage will update the server as well

--- a/web/index.html
+++ b/web/index.html
@@ -23,16 +23,35 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_application_1">
+  <meta name="apple-mobile-web-app-title" content="serunai_verify_halal_admin">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_application_1</title>
+  <title>Serunai Verify Halal Admin</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyB9mjtRkZhFAvshEHTGmJHMeoUSoPBEYxM",
+      authDomain: "dashboard-66aa3.firebaseapp.com",
+      projectId: "dashboard-66aa3",
+      storageBucket: "dashboard-66aa3.firebasestorage.app",
+      messagingSenderId: "822409611674",
+      appId: "1:822409611674:web:15abe6ddf97369c62e1223"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
